| Bug #59303 | Correct URL in crash message | ||
|---|---|---|---|
| Submitted: | 5 Jan 2011 9:28 | Modified: | 10 Jan 2011 19:04 |
| Reporter: | Roel Van de Paar | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: InnoDB storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1, 5.5 | OS: | Any |
| Assigned to: | Vasil Dimov | CPU Architecture: | Any |
[5 Jan 2011 9:28]
Roel Van de Paar
[6 Jan 2011 7:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/128037 3676 Vasil Dimov 2011-01-06 (Builtin InnoDB) Fix Bug#59303 Correct URL in crash message old URL: http://dev.mysql.com/doc/refman/5.1/en/forcing-recovery.html new URL: http://dev.mysql.com/doc/refman/5.1/en/forcing-innodb-recovery.html Notice that there is a redirect from the old URL to the new URL, so visiting the old URL does not give "page not found" error.
[6 Jan 2011 7:13]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/128038 3677 Vasil Dimov 2011-01-06 (InnoDB Plugin) Fix Bug#59303 Correct URL in crash message old URL: http://dev.mysql.com/doc/refman/5.1/en/forcing-recovery.html new URL: http://dev.mysql.com/doc/refman/5.1/en/forcing-innodb-recovery.html Notice that there is a redirect from the old URL to the new URL, so visiting the old URL does not give "page not found" error.
[8 Jan 2011 15:08]
Bugs System
Pushed into mysql-trunk 5.6.2 (revid:vasil.dimov@oracle.com-20110108150732-8qygun7nuaqf9d3u) (version source revid:vasil.dimov@oracle.com-20110108150646-44c9j7ck64ocey31) (merge vers: 5.6.2) (pib:24)
[8 Jan 2011 15:09]
Bugs System
Pushed into mysql-5.5 5.5.9 (revid:vasil.dimov@oracle.com-20110108150508-gpanhz48z8069qot) (version source revid:vasil.dimov@oracle.com-20110108150048-b1y9m8xe72hay0ch) (merge vers: 5.5.9) (pib:24)
[8 Jan 2011 15:12]
Bugs System
Pushed into mysql-5.1 5.1.55 (revid:vasil.dimov@oracle.com-20110108145923-0tjqdpa5w3d6tuwn) (version source revid:vasil.dimov@oracle.com-20110108145923-0tjqdpa5w3d6tuwn) (merge vers: 5.1.55) (pib:24)
[9 Jan 2011 23:57]
Roel Van de Paar
Vasil, part of the problem is that 5.5 gives this crash message: InnoDB: http://dev.mysql.com/doc/refman/5.1/en/forcing-recovery.html So s/5.1/5.5/ is needed also.
[10 Jan 2011 7:31]
Vasil Dimov
Hello, I have fixed the 5.1 vs 5.5 issue some time ago: revision-id: vasil.dimov@oracle.com-20101129125026-gxgcgjpvuwylaj6r committer: Vasil Dimov <vasil.dimov@oracle.com> branch nick: mysql-5.5-innodb timestamp: Mon 2010-11-29 14:50:26 +0200 message: Fix pointers to documentation Do not print pointer to the 5.1 documentation from within MySQL 5.5. Instead of hardcoding the MySQL version, use the MAJOR_VERSION and MINOR_VERSION CMake variables defined at top-level. from the diff of this changeset: -#define REFMAN "http://dev.mysql.com/doc/refman/5.1/en/" +#define REFMAN "http://dev.mysql.com/doc/refman/" \ + IB_TO_STR(MYSQL_MAJOR_VERSION) "." \ + IB_TO_STR(MYSQL_MINOR_VERSION) "/en/" Thanks!
